Final commit - finish the todo application

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  font-family: Roboto;
+  font-family: "SF Pro Display, Arial";
   overflow-x: hidden;
 
   background: #1d4350;
@@ -102,6 +102,30 @@ button:focus {
   box-shadow: 0 0 0 0rem rgba(0, 123, 255, 0.25);
 }
 
+.delete-custome {
+  color: #ffffff;
+  background: #ff6600;
+  display: block;
+  width: 100%;
+  height: calc(1.5em + 0.75rem + 2px);
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  background-clip: padding-box;
+  border: 1px solid#ff6600;
+  border-radius: 0.25rem;
+  transition: border-color 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
+}
+
+.delete-custome:focus {
+  color: #ffffff;
+  background-color: #ff1100;
+  border-color: #ff1100;
+  outline: 0;
+  box-shadow: 0 0 0 0rem rgba(0, 123, 255, 0.25);
+}
+
 @media (min-width: 300.98px) {
   .card-style {
     width: 600px;
@@ -115,6 +139,12 @@ button:focus {
   }
   .add-btn {
     width: 410px;
+  }
+  .custome-header {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    padding-left: 20px;
   }
 }
 
@@ -132,6 +162,12 @@ button:focus {
   }
   .add-btn {
     width: 500px;
+  }
+  .custome-header {
+    padding-top: 20px;
+    display: flex;
+    justify-content: center;
+    padding-left: 20px;
   }
 }
 
@@ -214,7 +250,16 @@ button:focus {
     width: 1032px;
   }
   .custome-paper {
-    width: 707px;
+    width: 963px;
+  }
+  .custome-header {
+    padding-top: 20px;
+    display: flex;
+    justify-content: start;
+    padding-left: 20px;
+  }
+  .custome-remove-button {
+    margin-bottom: 18px;
   }
 }
 
@@ -245,6 +290,7 @@ ul li:nth-child(odd) {
 
 ul li:hover {
   background: #ddd;
+  box-shadow: 0 0 20px rgba(83, 82, 82, 0.3);
 }
 
 .close {
@@ -254,9 +300,11 @@ ul li:hover {
   border-radius: 5px;
   height: 87%;
   width: 50px;
+  color: rgb(245, 0, 0);
 }
 
 .close:hover {
   background-color: #ff1100;
-  color: white;
+  color: rgb(255, 255, 255);
+  box-shadow: 0 0 20px rgba(30, 30, 30, 0.5);
 }
